--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav class="nav">
             <h3 class="nav-title">Nil<span>o</span>y.</h3>
             <ul>
@@ -17,6 +17,16 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div>
+                <h1 class="banner-greating">Hi , I am <span>Nur Ahammad Niloy</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi minima iure architecto eveniet eius quam dolor ducimus explicabo option </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+
+            </div>
+        </div>
     </header>
 </body>
 </html>
